feat: finished user creation and invitation endpoints
